# tiktoken

./: .gitignore  pyproject.toml  setup.py
tiktoken/: _tiktoken.py
